--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,13 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
+.added-input{
+  width: 100%;
+}
+
+.red{
+  color: var(--bs-red);
+}
 
 :root {
   --bs-blue: #0d6efd;
