--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,14 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
+
+
+ @media only screen and (max-width: 767px) {
+  #portfolio{
+    display: none;
+  }
+}
+
 .added-input{
   width: 100%;
 }
